--- a/app/src/main/res/layout/noteslist_item.xml
+++ b/app/src/main/res/layout/noteslist_item.xml
@@ -3,37 +3,39 @@
     android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
+    android:background="@drawable/note_background"
     android:elevation="2dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    >
 
     <!-- Title TextView -->
-<TextView
-android:id="@android:id/text1"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:textAppearance="?android:attr/textAppearanceLarge"
-android:textColor="#333333"
-    android:gravity="center_vertical"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:singleLine="true"
-    android:textStyle="bold"
-    android:textSize="18sp"
-    android:ellipsize="end"
-    android:lineSpacingExtra="4dp" />
-    <!-- Modification Date TextView -->
-<TextView
-android:id="@+id/modification_date_text"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:textColor="#999999"
-    android:textSize="14sp"
-    android:gravity="start"
-    android:paddingTop="4dp"
-    android:paddingLeft="16dp"
-    android:lineSpacingExtra="2dp" />
-    </LinearLayout>
+    <TextView
+        android:id="@android:id/text1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:singleLine="true"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:ellipsize="end"
+        android:lineSpacingExtra="4dp" />
+        <!-- Modification Date TextView -->
+
+    <TextView
+        android:id="@+id/modification_date_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:gravity="start"
+        android:paddingTop="4dp"
+        android:paddingLeft="16dp"
+        android:lineSpacingExtra="2dp" />
+</LinearLayout>
 
 
 
