--- a/app/src/main/res/menu/list_options_menu.xml
+++ b/app/src/main/res/menu/list_options_menu.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/menu_search"
         android:title="Search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_search"
         android:showAsAction="always|collapseActionView"
         android:actionViewClass="android.widget.SearchView" />
     <item
